[package]
name = "safe_serial_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.2"
serialport = "4.2"
ros2_rust_util = {git = "https://github.com/TakanoTaiga/ros2_rust_util.git"}
std_msgs = {path = "/tmp/.msg/std_msgs"}

async-std = { version = "1", features = ["attributes"] }

[package.metadata.ros]
msg = ["std_msgs"]
msg_dir = "/tmp/.msg/"
safe_drive_version = "0.2"
