cmake_minimum_required(VERSION 3.8)
project(haya_imu_ros2)
find_package(ament_cmake_auto REQUIRED)
ament_auto_find_build_dependencies()
ament_auto_add_library(lite_serial src/lite_serial.cpp include/lite_serial.hpp)
ament_auto_add_executable(haya_imu_node src/haya_imu_node.cpp)
ament_auto_add_executable(haya_topic_echo src/haya_topic_echo.cpp)
ament_auto_add_executable(haya_topic_hz src/haya_topic_hz.cpp)
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()
install(DIRECTORY launch config DESTINATION share/${PROJECT_NAME})
ament_auto_package()
